--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>Property Graph Schema Zooming</title>
     <script type="module" crossorigin src="./assets/index.2f68f78c.js"></script>
     <link rel="stylesheet" href="./assets/index.0c9e24c4.css">
   </head>
