--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Property Graph Schema Zooming</title>
-    <script type="module" crossorigin src="./assets/index.83255be3.js"></script>
-    <link rel="stylesheet" href="./assets/index.0c9e24c4.css">
+    <script type="module" crossorigin src="./assets/main.4fa2fcc9.js"></script>
+    <link rel="modulepreload" crossorigin href="./assets/TailwindCSS.e3dc057d.js">
+    <link rel="stylesheet" href="./assets/TailwindCSS.0c9e24c4.css">
   </head>
   <body>
     <div id="app"></div>
